countdown alignment fixed

--- a/css/style.css
+++ b/css/style.css
@@ -9785,7 +9785,7 @@ a.text-dark:hover, a.text-dark:focus {
   font-weight: 700;
   display: flex;
   justify-content: center;
-  gap: 20px; /* space between numbers and colons */
+  gap: 1px; /* space between numbers and colons */
 }
 
 #countdown span {
@@ -9805,7 +9805,7 @@ a.text-dark:hover, a.text-dark:focus {
   font-size: 12px;
   display: flex;
   justify-content: center;
-  gap: 60px; /* space between labels */
+  gap: 30px; /* space between labels */
   margin-top: 8px;
 }
 
